# SFC

./: CMakeLists.txt  LICENSE  PackagesList.cmake  README.md  TPLsList.cmake  Version.cmake
cmake/: Dependencies.cmake  SFC_config.hpp.in
core/example/: CMakeLists.txt
core/example/cond_neutron/: CMakeLists.txt  ConductionEvaluator.cpp  ConductionEvaluator.hpp  conduction_example.plot  conduction_input.xml  conduction_main.cpp
core/example/simple/: CMakeLists.txt  SimpleEvaluator.cpp  SimpleEvaluator.hpp  cxx_main.cpp  input.xml  simple_example.plot
core/src/: CMakeLists.txt  SFC_AveragePerturbation.cpp  SFC_BasicLineSearch.cpp  SFC_ConstantForcingTerm.hpp  SFC_DefaultGlobalization.cpp  SFC_DefaultGlobalization.hpp  SFC_DiagonalPreconditioner.cpp  SFC_DiagonalPreconditioner.hpp  SFC_ForcingTerm.hpp  SFC_GlobalizationFactory.hpp  SFC_JacobianOperator.cpp  SFC_NewtonSolver.cpp  SFC_NonlinearProblem.hpp
core/test/: CMakeLists.txt
example/: CMakeLists.txt
example/simple/: CMakeLists.txt  SimpleEvaluator.cpp  SimpleEvaluator.hpp  cxx_main.cpp
mesh/: CMakeLists.txt
mesh/src/: SFC_Mesh.hpp
src/: CMakeLists.txt  SFC_AveragePerturbation.cpp  SFC_AveragePerturbation.hpp  SFC_BasicLineSearch.cpp  SFC_BasicLineSearch.hpp  SFC_BasicPerturbation.cpp  SFC_BasicPerturbation.hpp  SFC_ConstantForcingTerm.cpp  SFC_ConstantForcingTerm.hpp  SFC_DBC.cpp  SFC_DBC.hpp  SFC_DefaultGlobalization.cpp  SFC_DefaultGlobalization.hpp  SFC_ForcingTermFactory.cpp  SFC_ForcingTermFactory.hpp  SFC_Globalization.hpp  SFC_GlobalizationFactory.cpp  SFC_GlobalizationFactory.hpp  SFC_JacobianOperator.cpp  SFC_JacobianOperator.hpp  SFC_ModelEvaluator.hpp  SFC_NewtonSolver.cpp  SFC_NewtonSolver.hpp  SFC_NonlinearProblem.cpp  SFC_NonlinearProblem.hpp  SFC_NonlinearResidual.hpp  SFC_PerturbationParameter.hpp  SFC_PerturbationParameterFactory.cpp  SFC_PerturbationParameterFactory.hpp
test/: tstDBC.cpp
